testsuite/tests/parser/should_fail/T17162.stderr

T17162.hs:7:21: error: [GHC-79767]
    Illegal bang-pattern
    !enc
    Suggested fix:
      Perhaps you intended to use the ‘BangPatterns’ extension
